Start new input on numeric entries after "equal"

Clear input display after a result has been moved to the input display
when entering a digit or decimal point.

BUG: 489043